# New-CMMS-Backend

./: .gitignore  README.md  pyproject.toml  pytest.ini
CMMS_Backend/: .coverage  Procfile
CMMS_Backend/Backend_App/: admin.py  apps.py  authentication.py  models.py  permissions.py  serializers.py  urls.py  views.py
CMMS_Backend/Backend_App/migrations/: 0001_initial.py  0006_rebateapp_status.py  0007_item_month_fixedcharges.py  0008_dailyrebaterefund.py  0009_delete_messbill.py  0011_remove_cart_expires_at.py  0012_alter_mybooking_status.py  0015_alter_mybooking_status.py  0017_default_month_current.py  0018_booking_stock_non_negative_constraint.py
CMMS_Backend/Backend_App/templates/Backend_App/: password_reset.html
CMMS_Backend/Backend_App/tests/: conftest.py  test_authentication.py  test_integration.py  test_models.py  test_serializers.py  test_views.py
CMMS_Backend/mysite/: settings.py  urls.py
